--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <div class="box">
         <label for=" ">
-            <img src="im/睁开.jpg" alt="" id="eye">
+            <img src="睁开.jpg" alt="" id="eye">
         </label>
         <input type="password" id="pwd">
     </div>
